--- a/Tarefa 01/T1-Latex-Files/01-definicao.tex
+++ b/Tarefa 01/T1-Latex-Files/01-definicao.tex
@@ -2,7 +2,10 @@
     \item \textbf{Defina Ética em Inteligência Artificial. }
 \end{enumerate}
 
-A ética em Inteligência Artificial (IA) representa um conjunto de valores e princípios que devem ser respeitados por todos os atores envolvidos no ciclo de vida de sistemas de IA com destaque ao respeito, proteção e promoção dos direitos humanos, liberdades fundamentais e dignidade humana, diversidade e inclusão \cite{unesco_ethics_ai}.
 
-Ética em Inteligência Artificial (IA) é um conjunto de valores fundamentais que devem ser respeitados por todas as pessoas envolvidas no desenvolvimento e utilização de sistemas de inteligencia artificial. Alguns desses valores são o respeito às pessoas, a justiça e beneficência. 
+A ética em Inteligência Artificial (IA) é um conjunto de valores fundamentais  englobando segurança, justiça, não discriminação, sustentabilidade, supervisão humana, transparência e explicabilidade, responsabilidade e prestação de contas, conscientização, governança adaptiva e colaboração aplicados ao ciclo de vida de sistemas de IA e respeitado por todos os atores (\textit{stakeholders}) envolvidos \cite{unesco_ethics_ai}. A escolha de um sistema de IA deve ser justificada como sendo apropriada para o propósito pretendido sem infringir direitos humanos e liberdades fundamentais. 
+
+
+
+
 
