--- a/Tarefa 01/T1-Latex-Files/03-paper.tex
+++ b/Tarefa 01/T1-Latex-Files/03-paper.tex
@@ -105,21 +105,13 @@ dando mais flexibilidade ao processo de proteção intelectual. Para textos a ma
 
 Após breve análise dos principais elementos desejáveis no escopo de GCIA responsáveis, faz-se necessário avaliar outras característivas que devem existir nos modelos.
 
-Os conteúdos gerados pelos modelos podem propagar informação oculta, violenta, danosa e falsa, em que os textos e imagens são difíceis de serem diferenciadas de conteúdos criados por pessoas. Assim, podem ser utilizados para publicação de notícias falsas (\textit{fake news}), boatos e até mensagens de assédio. Além disso, o uso para fins comerciais gera bastante controvérsia, passando por imagens e textos inseridos em produtos e soluções à integração dos modelos em software e sistemas. A possibilidade da substituição de determinados trabalhos realizados por pessoas de uma forma descontrolada é desconfortável para muitos.
+Os conteúdos gerados pelos modelos podem propagar informações danosas e falsas, em que os resultados são difíceis de serem diferenciados de conteúdos criados por pessoas. Além disso, o uso para fins comerciais gera bastante controvérsia. A possibilidade da substituição, de forma descontrolada, de trabalhos realizados por pessoas é desconfortável para muitos.
 
-Os modelos podem ser vistos como caixas-preta tendo uma entrada, um processamento que é oculto aos olhos dos usuários, e uma saída. Isto leva a uma necessidade de se explicar como e baseado em que o resultado é criado.
-Disponibilizar abertamente o código-fonte desses modelos pode resultar em riscos de se propagar as falhas 
-já mencionadas nos novos modelos, produzindo impactos imprevisíveis. 
-A possibilidade dos usuários fornecerem devolutivas \textit{feedback} sobre o uso dos modelos é algo necessário
-para se ter modelos responsáveis. Como exemplo, a OpenAI possibilita que usuários enviem feedback
-que são utilizados para a correção e melhoria, reduzindo possíveis impactos negativos.
+Os modelos podem ser vistos como caixas-preta. Isto leva a uma necessidade de se explicar como o resultado é criado e suas bases. Disponibilizar o código-fonte desses modelos pode propagar as falhas já mencionadas nos novos modelos, com impactos imprevisíveis. A possibilidade dos usuários fornecerem \textit{feedback} sobre o uso dos modelos é necessário para serem responsáveis. Como exemplo, a OpenAI possibilita que usuários enviem feedback que são utilizados para a correção e melhoria, reduzindo impactos negativos. 
 
-Outro ponto relevante é que os modelos são treinados com dados sem o devido consentimento, desrespeitando os direitos autorais e sem compensação aos autores pelo uso dos dados. Para evitar esse problema, as companhias passsaram a agir de forma ativa junto aos proprietários dos dados antes de realizarem o treinamento de seus modelos. Um caminho para contornar essa situação seria as empresas procurarem os autores solicitando autorização para uso dos dados bem como recompensá-los quando os dados forem consultados. Com isso haveria uma justa contrapartida para os autores e o uso responsável dos dados pelos modelos.
-
-
-Outro impacto é o elevado consumo de energia elétrica pelos computadores para treinar os modelos cada vez maiores, podendo ter bilhões ou trilhões de parâmetros. Isso leva a uma nova reflexão ainda sem solução. Os modelos deveriam buscar o equilíbrio de benefícios onde determinados grupos de pessoas podem ser privilegiadas em detrimento de outros grupos resultando em desigualdades globais.
+Frequentemente os modelos são treinados com dados sem o devido consentimento, desrespeitando os direitos autorais e sem compensação aos autores pelo uso dos dados. Para evitar esse problema, as companhias passaram a agir de forma ativa junto aos proprietários dos dados antes de realizarem o treinamento de seus modelos. Um caminho para contornar essa situação seria as empresas procurarem os autores solicitando autorização para uso dos dados bem como recompensá-los quando os dados forem consultados. Outro impacto é o elevado consumo de energia elétrica pelos computadores para treinar os modelos cada vez maiores. Os modelos devem buscar o equilíbrio de benefícios evitando que pessoas sejam privilegiadas em detrimento de outros grupos.
 
 
 Existem conflitos entre os objetivos de realização dos modelos de IA. Ao focar em prevenir certos riscos, como uso de termos tóxicos em modelos de linguagem, expõem-se outras vulnerabilidades e riscos, como a introdução e manutenção de viéses na predição. Neste exemplo, isso pode acarretar na discriminação de comunidades.
 
-O artigo finaliza indicando que GCIA ainda está em uma fase embrionária, em crescente e rápida evolução, com tecnologias impressionantes relacionadas ao campo das artes mas com vários riscos inerentes ao seu uso. Fornece um resumo dos atuais e potenciais riscos do uso de modelos possibilitando que empresas e usuários previnam-se, propondo ações para minimizar a ocorrência desses riscos. Conhecê-los, discuti-los, medi-los e agir é um bom caminho para o futuro dos modelos responsáveis.
+O artigo indica que GCIA está em crescente e rápida evolução, com avanços impressionantes nas artes mas com vários riscos em seu uso. Resume atuais e potenciais riscos do uso de modelos possibilitando que empresas e usuários previnam-se, propondo ações para minimizá-los. Conhecer, discutir, medir e agir sobre os riscos é um bom caminho para o futuro dos modelos responsáveis.
