Rubens - Working at ## 1. Dimensionality Reduction Techniques

--- a/Tarefa 03/T3_Unsupervised_Learning by Rubens.ipynb
+++ b/Tarefa 03/T3_Unsupervised_Learning by Rubens.ipynb
@@ -381,7 +381,7 @@
         "from PIL import Image\n",
         "\n",
         "## ------ Read Dataset ----- ##\n",
-        "df = pd.read_csv('digit_recognizer_train.csv')\n",
+        "df = pd.read_csv('data/digit_recognizer_train.csv')\n",
         "df = df.sample(frac=1)\n",
         "df.head(5)"
       ]
