Answered questions based on Rubens' notebook and mine

--- a/Tarefa 03/T3_Unsupervised_Learning by Marcelo.ipynb
+++ b/Tarefa 03/T3_Unsupervised_Learning by Marcelo.ipynb
@@ -1089,10 +1089,10 @@
       "source": [
         "**(2 points) Questions:**\n",
         "\n",
-        "- Did KMeans provide good separation (clusters) when compared to the original distribution? Why?\n",
-        "- Did the Elbow and Silhouette methods suggest the same number of clusters? Did these techniques suggest the same n_cluster as the original dataset?\n",
-        "- If you did not know the number of classes in the MNIST dataset, which method would you use and why? Is the suggested number of clusters the same as the number of classes in the dataset? Why do you think it is the same or different?\n",
-        "- When compared to other algorithms, did KMeans perform better? How can different clustering techniques be compared?"
+        "1. Did KMeans provide good separation (clusters) when compared to the original distribution? Why?\n",
+        "2. Did the Elbow and Silhouette methods suggest the same number of clusters? Did these techniques suggest the same n_cluster as the original dataset?\n",
+        "3. If you did not know the number of classes in the MNIST dataset, which method would you use and why? Is the suggested number of clusters the same as the number of classes in the dataset? Why do you think it is the same or different?\n",
+        "4. When compared to other algorithms, did KMeans perform better? How can different clustering techniques be compared?"
       ]
     },
     {
@@ -1102,10 +1102,15 @@
       "source": [
         "### Answers\n",
         "\n",
-        "1. \n",
-        "2. \n",
-        "3. \n",
-        "4. "
+        "1. Yes, the KMeans did provide good clusters when compared to the original distribution since they are better separated with more neatly delineated clusters as compared to the original. It's probably because KMeans works by computing the distance between points and the cluster centers, resulting in misclassification of points that are too far but ending up with nicer clusters.\n",
+        "\n",
+        "2. The Elbow method suggests 4 clusters as opposed to the 10 clusters from the original dataset, and the same number of clusters is suggested by the Silhouette analysis. \n",
+        "\n",
+        "2. The Elbow method suggest the dataset has about 4 cluster as we can observe in the plot. In the Silhouette method, it was processed with 10 values of k (clusters) which the best value of k is closest to +1 and the worst value is closest to -1. In these last method, we can observe in the plot for k = 10, all the Silhoutte coeficients were greater than 0.6 indicating we have a good clusterings with the pipeline used (PCA + t-SNE and KMeans). So, the first method doesn't indicate the same number of cluster than original and the second confirm a good clusterings for 10 clusters.\n",
+        "\n",
+        "3. If we didn't know previously the number of clusters, I would use both methods with the same number of cluster to evaluate its performance. As the Silhoutte method consider the mean intra-cluster disctance and the mean nearest-clustring distcane between a sample and the nearest cluster, I will choose the Silhoutte method to define number of clustering k of the dataset to apply the clustering mehods as KMeans.\n",
+        "\n",
+        "4. We used the Birch and Bisecting KMeans methods and comparing with KMeans using the plots, we can observe that the clusterings were, in general, classified as similar."
       ]
     },
     {
@@ -1197,11 +1202,11 @@
       "source": [
         "**(2 points) Questions:**\n",
         "\n",
-        "- Which model was used? What was the best result achieved without using PCA?\n",
-        "- What are your conclusions about the Baseline model?\n",
-        "- How did you define the best model for both approaches?\n",
-        "- Did the accuracy improve when using the PCA model?\n",
-        "- What are the advantages and disadvantages of using PCA on this dataset?\n"
+        "1. Which model was used? What was the best result achieved without using PCA?\n",
+        "2. What are your conclusions about the Baseline model?\n",
+        "3. How did you define the best model for both approaches?\n",
+        "4. Did the accuracy improve when using the PCA model?\n",
+        "5. What are the advantages and disadvantages of using PCA on this dataset?\n"
       ]
     },
     {
@@ -1211,11 +1216,11 @@
       "source": [
         "### Answers\n",
         "\n",
-        "1. \n",
-        "2. \n",
-        "3. \n",
-        "4. \n",
-        "5. "
+        "1. We used logistic regression for multiple classification for the baseline model. The best result achieved was 90% accuracy and 90% F1 score, which were the metrics used.\n",
+        "2. It performed well enough without the use of PCA to reduce the number of components, with 90% accuracy and 90% F1 score.\n",
+        "3. We used logistic regression for the baseline model since it can be adapted to cases where multiple classification are required, as is the case with the MNIST dataset. For the PCA + baseline model we performed exploratory analysis to find the optimal minimum of components that yielded a satisfactory accuracy and F1 score.\n",
+        "4. The accuracy didn't really improve using the PCA model unless we used at least 32 components, at which point the accuracy improvement was marginal over additional components.\n",
+        "5. Some advantages are reducing the number of components, reducing computational costs and number of features to analyze the dataset. Some disadvantages are that it is necessary to perform exploratory analysis to find out the minimum number of components to achieve decent results, which may be time consuming and require judicious choice of number of components."
       ]
     },
     {
