Latest Task 03 by Marcelo

--- a/Tarefa 03/T3_Unsupervised_Learning by Marcelo.ipynb
+++ b/Tarefa 03/T3_Unsupervised_Learning by Marcelo.ipynb
@@ -1104,13 +1104,11 @@
         "\n",
         "1. Yes, the KMeans did provide good clusters when compared to the original distribution since they are better separated with more neatly delineated clusters as compared to the original. It's probably because KMeans works by computing the distance between points and the cluster centers, resulting in misclassification of points that are too far but ending up with nicer clusters.\n",
         "\n",
-        "2. The Elbow method suggests 4 clusters as opposed to the 10 clusters from the original dataset, and the same number of clusters is suggested by the Silhouette analysis. \n",
+        "2. The Elbow method suggests 4 clusters as opposed to the 10 clusters from the original dataset, and the same number of clusters is suggested by the Silhouette analysis. None of them come close to the original number of clusters from the dataset.\n",
         "\n",
-        "2. The Elbow method suggest the dataset has about 4 cluster as we can observe in the plot. In the Silhouette method, it was processed with 10 values of k (clusters) which the best value of k is closest to +1 and the worst value is closest to -1. In these last method, we can observe in the plot for k = 10, all the Silhoutte coeficients were greater than 0.6 indicating we have a good clusterings with the pipeline used (PCA + t-SNE and KMeans). So, the first method doesn't indicate the same number of cluster than original and the second confirm a good clusterings for 10 clusters.\n",
+        "3. The Silhouette analysis would be best suited to find the suggested number of clusters because it considers the mean intra-cluster distance and the mean nearest-clustering distance, rendering a more nuanced analysis. The suggested number of clusters is not the same because points are grouped by distances rather than by features, thus leading the algorithm to assume there are fewer clusters than there actually are.\n",
         "\n",
-        "3. If we didn't know previously the number of clusters, I would use both methods with the same number of cluster to evaluate its performance. As the Silhoutte method consider the mean intra-cluster disctance and the mean nearest-clustring distcane between a sample and the nearest cluster, I will choose the Silhoutte method to define number of clustering k of the dataset to apply the clustering mehods as KMeans.\n",
-        "\n",
-        "4. We used the Birch and Bisecting KMeans methods and comparing with KMeans using the plots, we can observe that the clusterings were, in general, classified as similar."
+        "4. TODO: Find out if KMeans performed better and how to compare different clustering techniques."
       ]
     },
     {
