--- a/Tarefa 03/T3_Unsupervised_Learning.ipynb
+++ b/Tarefa 03/T3_Unsupervised_Learning.ipynb
@@ -866,11 +866,11 @@
         "\n",
         "1. Yes, the KMeans did provide good clusters when compared to the original distribution since they are better separated with more neatly delineated clusters as compared to the original. It's probably because KMeans works by computing the distance between points and the cluster centers, resulting in misclassification of points that are too far but ending up with nicer clusters.\n",
         "\n",
-        "2. ~~The Elbow method suggests 4 clusters as opposed to the 10 clusters from the original dataset. On the other hand, the Silhouette analysis does not suggest a definite number of clusters. For values of $n=3$ to $n=10$, with the exception of $n=5$, the silhouette score and the plot suggest that $n$ is a good number of clusters. This renders the Silhouette method ineffective for dealing with the number of clusters in this problem.~~\n",
+        "2. The Elbow method and the Silhouette analysis did not suggest the same number of clusters. The Elbow method suggested 4 clusters. To determine the number of clusters using the Silhouette analysis we observed the mean silhouette score in the plot, the height of each knife in the plot and the number of points with negative score in the plot. With this in mind, the analysis suggested $n=6$ clusters. None of them suggested the same number of clusters as the original dataset.\n",
         "\n",
         "3. The Silhouette analysis would be our choice for this problem because the silhouette score and plot takes in account more characteristics than just the distance between clusters. The Elbow method uses only the Euclidean distance between points while Silhouette uses more nuanced measures. The number of clusters suggested by Silhouette analysis is different from the number of classes in the dataset. They are not the same because points are grouped by other measures rather than by features, thus leading the algorithm to assume there are fewer clusters than there actually are.\n",
         "\n",
-        "4. "
+        "4. We visually compared KMeans with Birch and Bisecting KMeans methods. The best of the three is the Birch method, followed by KMeans, and last the Bisecting KMeans method. The Birch method created neatly separated clusters, while KMeans divided these clusters more haphazardly. Some ways to compare different clustering techniques are: use a gold standard and compute the distance/similarity between clusterings; compare the silhouette score for each clustering technique; use simulations to compare the performance; compare the computational efficiency when using large datasets; and consider the assumptions and limitations for each clustering technique."
       ]
     },
     {
